# template-python-poetry

./: .flake8  QUICK_REFERENCE.md  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
src/: __init__.py  main.py
tests/: test_main.py
